# search_engine

./: CMakeLists.txt  ConverterJSON.h  README.md  answers.json  config.json  index.json  inverted_index.json  main.cpp  positional_index.json  requests.json  Че там происходит.txt
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file000.txt  file002.txt  file003.txt  file005.txt  file006.txt  file007.txt  file008.txt  file010.txt  file011.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tst/: CMakeLists.txt  hello_test.cc
